--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="action_shared_fragments">Shared LiveData</string>
+    <string name="msg_toast_tap_view">Tap on View to increase the counter!</string>
 </resources>
