--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,10 @@
 <resources>
     <string name="app_name">LiveData</string>
     <string name="action_settings">Settings</string>
-
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="action_shared_fragments">Shared LiveData</string>
     <string name="msg_toast_tap_view">Tap on View to increase the counter!</string>
+    <string name="action_transform_fragments">Transform LiveData</string>
+    <string name="activity_transform">Transformations</string>
+    <string name="activity_shared_data">Shared LiveData</string>
+    <string name="desc_transformations">Transformations is used to build the full address by combining individual fields. By updating user, you can see the changes reflected automatically.</string>
 </resources>
